@@ -1,6 +1,8 @@
 package fi.aalto.cs.apluscourses.intellij.actions;
 
 import static org.hamcrest.CoreMatchers.is;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertSame;
 import static org.junit.Assert.assertThat;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyInt;
@@ -21,7 +23,6 @@ import com.intellij.openapi.actionSystem.AnActionEvent;
 import com.intellij.openapi.module.Module;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.util.io.FileUtilRt;
-import com.intellij.testFramework.fixtures.BasePlatformTestCase;
 import fi.aalto.cs.apluscourses.intellij.DialogHelper;
 import fi.aalto.cs.apluscourses.intellij.actions.SubmitExerciseAction.Tagger;
 import fi.aalto.cs.apluscourses.intellij.model.ProjectModuleSource;
@@ -32,9 +33,9 @@ import fi.aalto.cs.apluscourses.intellij.notifications.NetworkErrorNotification;
 import fi.aalto.cs.apluscourses.intellij.notifications.NotSubmittableNotification;
 import fi.aalto.cs.apluscourses.intellij.notifications.Notifier;
 import fi.aalto.cs.apluscourses.intellij.notifications.SubmissionSentNotification;
+import fi.aalto.cs.apluscourses.intellij.services.DefaultGroupIdSetting;
 import fi.aalto.cs.apluscourses.intellij.services.Dialogs;
 import fi.aalto.cs.apluscourses.intellij.services.MainViewModelProvider;
-import fi.aalto.cs.apluscourses.intellij.services.PluginSettings;
 import fi.aalto.cs.apluscourses.model.Authentication;
 import fi.aalto.cs.apluscourses.model.Course;
 import fi.aalto.cs.apluscourses.model.Exercise;
@@ -55,21 +56,20 @@ import fi.aalto.cs.apluscourses.presentation.exercise.ExercisesTreeViewModel;
 import fi.aalto.cs.apluscourses.presentation.exercise.SubmissionViewModel;
 import fi.aalto.cs.apluscourses.presentation.filter.Options;
 import java.io.IOException;
-import java.net.URL;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Objects;
+import java.util.Optional;
+import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
 import org.junit.Before;
-import org.junit.Ignore;
 import org.junit.Test;
 import org.mockito.ArgumentCaptor;
 
-@Ignore
-public class SubmitExerciseActionTest extends BasePlatformTestCase {
+public class SubmitExerciseActionTest {
 
   Course course;
   long exerciseId;
@@ -107,6 +107,8 @@ public class SubmitExerciseActionTest extends BasePlatformTestCase {
   Points points;
   Tagger tagger;
   SubmitExerciseAction.DocumentSaver documentSaver;
+  SubmitExerciseAction.LanguageSource languageSource;
+  DefaultGroupIdSetting defaultGroupIdSetting;
 
   /**
    * Called before each test.
@@ -116,20 +118,19 @@ public class SubmitExerciseActionTest extends BasePlatformTestCase {
    */
   @Before
   public void setUp() throws Exception {
-    super.setUp();
     exerciseId = 12;
-    var language = "fi";
-    var info = new SubmissionInfo(
-        Collections.singletonMap(language, Collections.singletonList(file)));
-    exercise = new Exercise(exerciseId, "Test exercise", "http://localhost:10000", info, 0, 0, 0);
+    fileName = "some_file.scala";
+    fileKey = "file1";
+    file = new SubmittableFile(fileKey, fileName);
+    String language = "fi";
+    submissionInfo = new SubmissionInfo(Map.of(language, Collections.singletonList(file)));
+    exercise = new Exercise(
+        exerciseId, "Test exercise", "http://localhost:10000", submissionInfo, 0, 0, 0);
     group = new Group(124, Collections.singletonList("Only you"));
     groups = Collections.singletonList(group);
     exerciseGroup = new ExerciseGroup(0, "Test EG", "", true);
     exerciseGroup.addExercise(exercise);
     exerciseGroups = Collections.singletonList(exerciseGroup);
-    fileName = "some_file.scala";
-    fileKey = "file1";
-    file = new SubmittableFile(fileKey, fileName);
 
     mainViewModel = new MainViewModel(new Options());
 
@@ -149,8 +150,9 @@ public class SubmitExerciseActionTest extends BasePlatformTestCase {
     courseViewModel = new CourseViewModel(course);
     mainViewModel.courseViewModel.set(courseViewModel);
 
-    exercises = Objects.requireNonNull(mainViewModel.exercisesViewModel.get());
+    exercises = new ExercisesTreeViewModel(exerciseGroups, new Options());
     exercises.getChildren().get(0).getChildren().get(0).setSelected(true);
+    mainViewModel.exercisesViewModel.set(exercises);
 
     moduleName = "MyModule";
     modulePath = Paths.get(moduleName);
@@ -162,11 +164,6 @@ public class SubmitExerciseActionTest extends BasePlatformTestCase {
 
     project = mock(Project.class);
     doReturn(FileUtilRt.getTempDirectory()).when(project).getBasePath();
-
-    PluginSettings
-        .getInstance()
-        .getCourseFileManager(project)
-        .createAndLoad(new URL("http://localhost:8000"), language);
 
     filePath = modulePath.resolve(fileName);
 
@@ -210,13 +207,18 @@ public class SubmitExerciseActionTest extends BasePlatformTestCase {
     tagger = mock(Tagger.class);
 
     documentSaver = mock(SubmitExerciseAction.DocumentSaver.class);
+    
+    languageSource = mock(SubmitExerciseAction.LanguageSource.class);
+    doReturn(language).when(languageSource).getLanguage(project);
+    
+    defaultGroupIdSetting = new TestDefaultGroupIdSetting();
 
     action = new SubmitExerciseAction(mainVmProvider, authProvider, fileFinder, moduleSource,
-        dialogs, notifier, tagger, documentSaver);
+        dialogs, notifier, tagger, documentSaver, languageSource, defaultGroupIdSetting);
   }
 
   @Test
-  public void ignoretestSubmitExerciseAction() throws IOException {
+  public void testSubmitExerciseAction() throws IOException {
     action.actionPerformed(event);
 
     ArgumentCaptor<Submission> submissionArg = ArgumentCaptor.forClass(Submission.class);
@@ -239,7 +241,7 @@ public class SubmitExerciseActionTest extends BasePlatformTestCase {
   }
 
   @Test
-  public void ignoretestNotifiesNoExerciseSelected() {
+  public void testNotifiesNoExerciseSelected() {
     exercises.getChildren().get(0).getChildren().get(0).setSelected(false);
 
     action.actionPerformed(event);
@@ -251,7 +253,7 @@ public class SubmitExerciseActionTest extends BasePlatformTestCase {
   }
 
   @Test
-  public void ignoretestNotifiesOfMissingFile() throws IOException {
+  public void testNotifiesOfMissingFile() throws IOException {
     doReturn(null).when(fileFinder).tryFindFile(modulePath, fileName);
 
     action.actionPerformed(event);
@@ -272,7 +274,7 @@ public class SubmitExerciseActionTest extends BasePlatformTestCase {
   }
 
   @Test
-  public void ignoretestNotifiesOfMissingModule() throws IOException {
+  public void testNotifiesOfMissingModule() throws IOException {
     String nonexistentModuleName = "nonexistent module";
 
     Map<Long, Map<String, String>> map = Collections.singletonMap(exerciseId,
@@ -297,7 +299,15 @@ public class SubmitExerciseActionTest extends BasePlatformTestCase {
   }
 
   @Test
-  public void ignoretestNotifiesExerciseNotSubmittable() throws IOException {
+  public void testNotifiesExerciseNotSubmittable() throws IOException {
+    var exercise = new Exercise(0, "", "", new SubmissionInfo(Map.of()), 0, 0, 0);
+    var exerciseGroup = new ExerciseGroup(0, "", "", true);
+    exerciseGroup.addExercise(exercise);
+    mainViewModel.exercisesViewModel.set(
+        new ExercisesTreeViewModel(List.of(exerciseGroup), new Options()));
+    mainViewModel.exercisesViewModel
+        .get().getChildren().get(0).getChildren().get(0).setSelected(true);
+
     action.actionPerformed(event);
 
     verifyNoInteractions(moduleSelectionDialog);
@@ -310,7 +320,7 @@ public class SubmitExerciseActionTest extends BasePlatformTestCase {
   }
 
   @Test
-  public void ignoretestNotifiesOfNetworkErrorWhenGettingGroups() throws IOException {
+  public void testNotifiesOfNetworkErrorWhenGettingGroups() throws IOException {
     IOException exception = new IOException();
     doThrow(exception).when(exerciseDataSource).getGroups(course, authentication);
 
@@ -331,7 +341,7 @@ public class SubmitExerciseActionTest extends BasePlatformTestCase {
   }
 
   @Test
-  public void ignoretestNotifiesOfNetworkErrorWhenSubmitting() throws IOException {
+  public void testNotifiesOfNetworkErrorWhenSubmitting() throws IOException {
     IOException exception = new IOException();
     doThrow(exception).when(exerciseDataSource).submit(any(), any());
 
@@ -349,7 +359,7 @@ public class SubmitExerciseActionTest extends BasePlatformTestCase {
   }
 
   @Test
-  public void ignoretestModuleSelectionDialogCancel() throws IOException {
+  public void testModuleSelectionDialogCancel() throws IOException {
     dialogs.register(SubmissionViewModel.class, (submission, project) -> () -> false);
 
     action.actionPerformed(event);
@@ -357,5 +367,24 @@ public class SubmitExerciseActionTest extends BasePlatformTestCase {
     verify(exerciseDataSource, never()).submit(any(), any());
 
     verifyNoInteractions(notifier);
+  }
+
+  public static class TestDefaultGroupIdSetting implements DefaultGroupIdSetting {
+    private volatile @Nullable Long defaultGroupId = null;
+    
+    @Override
+    public @NotNull Optional<Long> getDefaultGroupId() {
+      return Optional.ofNullable(defaultGroupId);
+    }
+  
+    @Override
+    public void setDefaultGroupId(long groupId) {
+      defaultGroupId = groupId;
+    }
+  
+    @Override
+    public void clearDefaultGroupId() {
+      defaultGroupId = null;
+    }
   }
 }
